k8s/httpbin/httpbin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  replicas: 9
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: ericdahl/httpbin:e249975
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
#            memory: "128Mi"
