k8s/httpbin/httpbin-service-alb.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: LoadBalancer
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 8080
