k8s/httpbin/httpbin-service-elb.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  labels:
    name: httpbin-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "0.0.0.0/0"
spec:
  selector:
    app: httpbin
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
