k8s/httpbin/httpbin-service-ingress.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: httpbin-service
#  labels:
#    name: httpbin-service
#  annotations:
#    #    service.beta.kubernetes.io/aws-load-balancer-internal: "0.0.0.0/0"
#    kubernetes.io/ingress.class: alb
#spec:
#  selector:
#    app: httpbin
#  type: Ingress
#  ports:
#    - port: 80
#      targetPort: 8080
#
#
#---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: httpbin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: httpbin
              servicePort: 80
